--- a/manifest.json
+++ b/manifest.json
@@ -41,7 +41,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["icons/*.png", "resources/*", "assets/img/*.png", "assets/css/*.css", "scripts/widget.js"],
+      "resources": ["icons/*.png", "resources/*", "assets/img/*.png", "assets/img/*.jpg", "assets/img/*.gif", "assets/css/*.css", "assets/fonts/*", "scripts/widget.js"],
       "matches": ["<all_urls>"]
     }
   ]
