--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
   "permissions": [
     "activeTab",
     "storage",
-    "scripting"
+    "scripting",
+    "sidePanel"
   ],
   "host_permissions": [
     "https://aurora-sdg.labs.vu.nl/*",
@@ -34,6 +35,9 @@
       "128": "icons/icon128.png"
     }
   },
+  "side_panel": {
+    "default_path": "sidebar/sidebar.html"
+  },
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
@@ -41,7 +45,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["icons/*.png", "resources/*", "assets/img/*.png", "assets/img/*.jpg", "assets/img/*.gif", "assets/css/*.css", "assets/fonts/*", "scripts/widget.js"],
+      "resources": ["icons/*.png", "resources/*", "assets/img/*.png", "assets/css/*.css", "scripts/widget.js"],
       "matches": ["<all_urls>"]
     }
   ]
