fixed syntax errors
JavaScript files are now syntactically correct. Let me create a comprehensive summary of the fixes made and testing instructions:

✅ Both Errors Successfully Fixed
Error 1: widget.js Syntax Error (Line 250)
Issue: "Uncaught SyntaxError: Unexpected token ')'"
Root Cause: Extra closing }); on line 250 that should have been just } to properly close the processSDGData function.
Fix: Changed }); to } on line 250 to correctly close the function scope.

Error 2: background.js User Gesture Error (Line 117)
Issue: "Error opening sidebar: Error: 'sidePanel.open()' may only be called in response to a user gesture."
Root Cause: chrome.sidePanel.open() was being called from a content script message, which doesn't count as a user gesture.
Fix: Implemented proper user gesture flow:

Removed automatic sidebar opening from content script
Added sidebar opening functionality to popup.js (runs in user gesture context)
When user selects 'sidebar' mode from popup dropdown, it immediately opens sidebar and closes popup
Added "tabs" permission to manifest.json for tab querying
🔧 Files Modified
scripts/widget.js - Fixed syntax error on line 250
scripts/background.js - Removed problematic message listener, added proper sidebar handling
scripts/content.js - Updated to not automatically open sidebar
popup/popup.js - Added openSidebarFromPopup() function with proper user gesture handling
manifest.json - Added "tabs" permission
🧪 Testing Instructions
Load the extension:
Bash
Copy Code
cd /home/ubuntu/sdg-badge-extension
Open Chrome/Edge and go to chrome://extensions/
Enable "Developer mode"
Click "Load unpacked" and select the extension directory
Test all 3 view modes: Popup Mode (Default):
Click extension icon → popup should open without errors
Check console for no syntax errors
Floating Widget Mode:
Click extension icon → popup opens
Select "Floating" from view mode dropdown
Visit any webpage → floating widget should appear
Sidebar Mode:
Click extension icon → popup opens
S

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "activeTab",
     "storage",
     "scripting",
-    "sidePanel"
+    "sidePanel",
+    "tabs"
   ],
   "host_permissions": [
     "https://aurora-sdg.labs.vu.nl/*",
